--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_svg: ^0.17.4
-  provider: ^4.3.1
+  #flutter_svg: ^0.17.4
+  #provider: ^4.3.1
   firebase_core: ^2.7.1
   firebase_auth: ^4.2.10
   firebase_storage: ^11.0.15
