--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,14 @@ dependencies:
   firebase_auth: ^4.2.10
   firebase_storage: ^11.0.15
   cloud_firestore: ^4.4.4
+  flutter_svg: ^2.0.4
+  # dio: ^5.1.1
+  # gallery_saver: ^2.3.2
+  # path_provider: ^2.0.14
+  # pdf_viewer_plugin: ^2.0.1
+  # flutter_pdfview: ^1.3.0
+  
+
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +78,7 @@ flutter:
     - image/
     - image/demarrage/
     - image/photo_etudiant/
+    - image/iconsvg/
     
 
   # An image asset can refer to one or more resolution-specific "variants", see
